<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"  android:textColor="@color/title_bar_font" android:textStyle="bold" android:text="@string/passage_text"  android:layout_marginTop="5dp" android:layout_marginLeft="10dp" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/content_area"  android:padding="5dp" android:layout_margin="5dp" >
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical"  >
	    	<TextView android:id="@+id/bodyText" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="@color/content_font" />
	    	<ImageButton android:id="@+id/listenButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/listen" android:focusable="false" android:background="@null" android:layout_marginRight="5dp" android:layout_marginTop="2dp" android:contentDescription="@string/listen" />
	    </LinearLayout>
    </ScrollView>
    
	
		<LinearLayout android:id="@+id/contextHolder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
		    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"  android:textColor="@color/title_bar_font" android:textStyle="bold" android:text="@string/context"  android:layout_marginTop="5dp" android:layout_marginLeft="10dp" />
			<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/content_area"  android:padding="5dp" android:layout_margin="5dp" >
				<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical"  >
				    <TextView android:id="@+id/contextReference" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="@color/content_font" android:textStyle="bold" />
			    	<TextView android:id="@+id/contextBody" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:textColor="@color/content_font" />
			    	<ImageButton android:id="@+id/passageListenButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/listen" android:focusable="false" android:background="@null" android:layout_marginRight="5dp" android:layout_marginTop="2dp" android:contentDescription="@string/listen" />
		    	</LinearLayout>
		    </ScrollView>
	    </LinearLayout>
	
	
</LinearLayout>
